--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Frontend Coding Challenge</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <h1>Frontend Coding Challenge</h1>
-        <p>You're all set! Now let's get to the action!</p>
-        <h2>Use React</h2>
-        <p>We would like to evaluate your react knowledge so please use react to solve this task.</p>
-        <p>Keep in mind that is important for youto demonstrate your technical knowledge and attention to quality.<p>
-        <h2>Run your app</h2>
-        <p>If you're not yet running the static server, you can do so by running the following command on your terminal:</p>
-        <pre>npm start</pre>
-        <h2>Twitter API</h2>
-        <p>The proxy server should be already running in the background. If you provided correct credentials for your Twitter API and Twitter Secret Key, you should now be able to use the api as the example below:</p>
-        <pre>http://localhost:7890/1.1/statuses/user_timeline.json?count=30&screen_name=versaagency</pre>
-    </body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Frontend Coding Challenge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  </head>
+
+  <body>
+    <h1>Frontend Coding Challenge</h1>
+    <p>You're all set! Now let's get to the action!</p>
+    <h2>Use React</h2>
+    <p>
+      We would like to evaluate your react knowledge so please use react to solve this task.
+    </p>
+    <p>
+      Keep in mind that is important for youto demonstrate your technical knowledge and attention to quality.
+    </p>
+    <p></p>
+    <h2>Run your app</h2>
+    <p>
+      If you're not yet running the static server, you can do so by running the following command on your terminal:
+    </p>
+    <pre>npm start</pre>
+    <h2>Twitter API</h2>
+    <p>
+      The proxy server should be already running in the background. If you provided correct credentials for your Twitter
+      API and Twitter Secret Key, you should now be able to use the api as the example below:
+    </p>
+    <pre>http://localhost:7890/1.1/statuses/user_timeline.json?count=30&screen_name=versaagency</pre>
+
+    <div id="tweets_container"></div>
+    
+    <!-- Load our React component. -->
+    <script src="tweets.js"></script>
+  </body>
+</html>
