--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script crossorigin src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script> -->
+    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <script crossorigin src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
   <body>
@@ -35,8 +39,8 @@
     <pre>http://localhost:7890/1.1/statuses/user_timeline.json?count=30&screen_name=versaagency</pre>
 
     <div id="tweets_container"></div>
-    
+
     <!-- Load our React component. -->
-    <script src="tweets.js"></script>
+    <script src="tweets.js" type="text/babel"></script>
   </body>
 </html>
